--- a/style.css
+++ b/style.css
@@ -47,7 +47,8 @@ header{
   color: yellow;
   padding: 30px;
   border-bottom: 3px solid yellow;
-
+  background: url("0000085662-scaled.jpeg") no-repeat center;
+  background-size: 100% 100%;
 }
 
 .info{
