--- a/style2.css
+++ b/style2.css
@@ -6,7 +6,7 @@ body {
     line-height: 20px;
     background: crimson;
     text-align: center; 
-    background-image: url("E:/nWtDhoFiRxY.jpg");
+    background-image: url("nWtDhoFiRxY.jpg");
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
