--- a/style_1st_cem.css
+++ b/style_1st_cem.css
@@ -95,7 +95,8 @@ table.practic {
     color: yellow;
     padding: 30px;
     border-bottom: 3px solid yellow;
-  
+    background: url("0000085662-scaled.jpeg") no-repeat center;
+  background-size: 100% 100%;
   } 
    a{
     color:yellow;
