--- a/style3.css
+++ b/style3.css
@@ -13,7 +13,7 @@ color: yellow;
     color: yellow;
     padding: 30px;
   border-bottom: 3px solid yellow ;
-  background: url("E:/0000085662-scaled.jpeg") no-repeat ;
+  background: url("0000085662-scaled.jpeg") no-repeat ;
   background-size: 100% 100%;
   }
   #infLogo{
